# cs_education

./: .gitignore  app.py  config.py  dependencies.py  main.py  package-lock.json  package.json  pyproject.toml  redis_queue.py  tsconfig.json  webpack.config.js
.github/workflows/: deploy_back.yml  deploy_bots.yml  deploy_front.yml
admin_bot/: bot.py  pyrogram_bot.py
admin_bot/handlers/: channel_handler.py  private_handlers.py
admin_bot/middlewares/: trottling_middleware.py
admin_bot/misc/: callbackdata.py  data.py  keyboards.py  media_group_decorator.py  objects.py  states.py
database/: db_engine.py  models.py
db/: engine.py  models.py
education_bot/: bot.py
education_bot/handlers/: chat_handlers.py  private_handlers.py
education_bot/misc/: callbackdata.py  data.py  funcs.py  keyboards.py  states.py  text_templates.py
funcs/: grenade_funcs.py  key_builder.py  objects.py  user_funcs.py
public/: admin.html  index.html
routers/: admin_api.py  grenade_api.py  user_api.py
src/: Admin.tsx  Editor.tsx  editor.css  index.css  index.tsx
src/components/: errorPages.tsx  grenadePopup.tsx  info.tsx  loading.tsx  main.tsx  map.tsx  menu.tsx  otherPopups.tsx  positions.tsx  switch.tsx
src/extra/: Interfaces.ts  apiRequests.ts  enums.ts
src/styles/: main.css  menu.css
tools/: deps.py  key_builders.py  redis_worker.py  worker_funcs.py
