[project]
name = "cs-guides"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "environs (>=14.1.1,<15.0.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
    "arq (>=0.26.3,<0.27.0)",
    "msgpack (>=1.1.0,<2.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "ruff (>=0.13.0,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
